--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="nav_news">News</string>
+    <string name="remove">Remove</string>
+    <string name="cancel_remove">Cancel Remove</string>
 </resources>
